<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/toolbar_height"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.Material3.CardView.Elevated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    app:layout_collapseMode="pin">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/profileImage"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_margin="16dp"
                            android:scaleType="centerCrop"
                            android:theme="@style/Theme.Hw7.CornerSize50Percent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@color/black" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/profileName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="14dp"
                            android:text="@string/cardTitle"
                            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/profileImage"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_goneMarginStart="16dp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/profileBio"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/subtitle"
                            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/profileImage"
                            app:layout_constraintTop_toBottomOf="@id/profileName" />

                        <com.google.android.material.divider.MaterialDivider
                            android:id="@+id/dividerTop"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="32dp"
                            android:background="@color/divider"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/profileBio" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/imagesCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                            app:layout_constraintEnd_toEndOf="@id/images"
                            app:layout_constraintStart_toStartOf="@id/images"
                            app:layout_constraintTop_toBottomOf="@id/dividerTop"
                            tools:text="3" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/images"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="44dp"
                            android:text="@string/profile_images"
                            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                            app:layout_constraintEnd_toStartOf="@+id/subscribers"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imagesCount" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/subscribersCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                            app:layout_constraintEnd_toEndOf="@id/subscribers"
                            app:layout_constraintStart_toStartOf="@id/subscribers"
                            app:layout_constraintTop_toTopOf="@id/dividerTop"
                            tools:text="5" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/subscribers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="74dp"
                            android:text="@string/profile_subscribers"
                            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                            app:layout_constraintEnd_toStartOf="@+id/posts"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"
                            app:layout_constraintStart_toEndOf="@+id/images"
                            app:layout_constraintTop_toBottomOf="@id/subscribersCount" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/postsCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                            app:layout_constraintEnd_toEndOf="@id/posts"
                            app:layout_constraintStart_toStartOf="@id/posts"
                            app:layout_constraintTop_toBottomOf="@+id/dividerTop"
                            tools:text="3" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/posts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="70dp"
                            android:layout_marginEnd="44dp"
                            android:text="@string/profile_posts"
                            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"
                            app:layout_constraintStart_toEndOf="@+id/subscribers"
                            app:layout_constraintTop_toBottomOf="@id/postsCount" />

                        <com.google.android.material.divider.MaterialDivider
                            android:id="@+id/dividerBottom"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="14dp"
                            android:background="@color/divider"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/images" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnSubscribeOrEdit"
                            style="@style/Widget.Material3.Button.ElevatedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:backgroundTint="?attr/colorSecondaryContainer"
                            android:text="@string/edit"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/dividerBottom" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/imagesCard"
                    style="@style/Widget.Material3.CardView.Elevated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    app:layout_collapseMode="pin">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/imagesTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="18dp"
                            android:text="@string/profile_images_title"
                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/btnToGallery"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_margin="16dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_forward_chevron"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/imagesList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="18dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="16dp"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imagesTitle" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:navigationIconTint="?attr/colorOnSurface"
                app:title="@string/title_profile"
                app:titleCentered="true" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/feedList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:icon="@drawable/ic_add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>